Mon  Jul 25 2005	H. Wade Minter (minter@lunenburg.org)
     * Bump version to 2.0.9c (final beta?)

Sun  Jul 24 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug that would cause a crash if you tried to drop a song into
       the holding tank that already existed there.  Thanks to Lanny in Dallas.

Tue  Jul  5 2005	H. Wade Minter (minter@lunenburg.org)
     * Begin pointing to mrvoice.net URL.

Sun  May 29 2005	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bulk-add bug.  Reported by Rob in Richmond.
     * Add a status bar to the online search window.  Requested by
       Lanny in Dallas.
     * Add new logo to the About box, Windows icon, and XPM icon.
     * Use MP3::Info instead of MPEG::MP3Info.
     * Specify binmode explicitly when dealing with binary data.
     * Add some extra debugging statements dealing with online file transfer.
     * Bump version to 2.0.9b

Sat  May 21 2005	H. Wade Minter (minter@lunenburg.org)
     * Stop trying to be smarter than XMLRPC::Lite and allow it to handle
       encoding and decoding binary files.

Tue  May 10 2005	H. Wade Minter (minter@lunenburg.org)
     * Remove the plugin stuff until 2.2.

Tue  Apr  5 2005	H. Wade Minter (minter@lunenburg.org)
     * Hardcode Tk::DragDrop::Win32Site in the module list.

Fri  Mar 25 2005	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug in reporting during the local online comparison.

Thu  Mar 24 2005	H. Wade Minter (minter@lunenburg.org)
     * Add a preference entry to check the app version.
     * Fix the Return key binding in Online Search.
     * Move the config file writing into its own subroutine to it can
       be used by the version check.
     * Add some prepackaged online searches.
     * Fix an inconsistency in the get_md5 subroutine.
     * Pop up an infobox on OS X if Audion isn't found.  Thanks to Tim Klein.
     * Handle a missing Audion better.

Wed  Mar 23 2005	H. Wade Minter (minter@lunenburg.org)